remove mood.json to include it on profile page

--- a/views/profile.erb
+++ b/views/profile.erb
@@ -1,3 +1,8 @@
+<script>
+  var mood=<%= @mood.to_json %>;
+</script>
+
+
 <div id="left-container"> 
   <div class="text"> 
     <h4>Mood Chart</h4>
